# pytest_tutorial

./: .gitignore  README.md  pyproject.toml
pytest_tutorial/: pytest_tutorial.py
tests/: test_pytest_tutorial.py
