[tool.poetry]
name = "pytest_tutorial"
version = "0.1.0"
description = "Simple tutorial to teach the PyTest framework"
authors = ["Graeme <graeme_c_smith@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

license = "MIT"
readme = "README.rst"